Minor update
- use GET method for getUpdates
- add AllowedUpdate model
- fix typos
- lock some deps
